--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@ionic/angular": "^4.1.0",
     "core-js": "^2.5.4",
     "ng-socket-io": "^0.2.4",
-    "rxjs": "~6.3.3",
+    "ngx-socket-io": "^2.1.1",
+    "rxjs": "^6.3.3",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
