--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@capacitor/android": "^1.0.0-beta.19",
     "@capacitor/cli": "1.0.0-beta.19",
     "@capacitor/core": "1.0.0-beta.19",
+    "@ionic-native/contacts": "^5.4.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "core-js": "^2.5.4",
     "ng-socket-io": "^0.2.4",
+    "ngx-socket-io": "^2.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
