--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "cordova-plugin-contacts": "3.0.1",
     "core-js": "^2.5.4",
     "ng-socket-io": "^0.2.4",
     "ngx-socket-io": "^2.1.1",
@@ -60,5 +61,10 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-contacts": {}
+    }
+  }
 }
