--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/pwa-elements": "^1.0.2",
     "cordova-plugin-contacts": "3.0.1",
     "cordova-plugin-sim": "1.3.3",
     "cordova-plugin-x-socialsharing": "5.4.4",
