--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cordova-sms-plugin": "1.0.0",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
+    "hammerjs": "^2.0.8",
     "ng-socket-io": "^0.2.4",
     "ngx-socket-io": "^2.1.1",
     "rxjs": "^6.3.3",
