--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "bootstrap": "^4.3.1",
     "cordova-plugin-contacts": "3.0.1",
     "cordova-plugin-sim": "1.3.3",
     "cordova-plugin-x-socialsharing": "5.4.4",
@@ -38,8 +39,10 @@
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "ng-socket-io": "^0.2.4",
     "ngx-socket-io": "^2.1.1",
+    "popper": "^1.0.1",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.29"
   },
